--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "socks": "^2.8.7",
     "ssh2": "^1.14.0",
     "ssh2-sftp-client": "^9.1.0"
   }
