--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "msc_mdw",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./qgtunnel & npm start"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "MSC",
